<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:src="@drawable/logo"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/etUsuario"
        android:layout_marginBottom="83dp"
        android:text="@string/usuariotv" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/etPassword"
        android:layout_marginBottom="120dp"
        android:text="@string/passwordtv" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btIngresar"
        android:layout_marginBottom="102dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="login"
        android:text="@string/ingresarbt"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvPassword"
        android:layout_marginBottom="99dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:text="@string/usuario" />
</RelativeLayout>